--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zabidatportfolio",
-  "homepage": "https://YourUserName.github.io/your-repo/",
+  "homepage": "https://YourUserName.github.io/Zabidat/",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
