--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zabidatportfolio",
-  "homepage": "https://YourUserName.github.io/Zabidat/",
+  "homepage": "https://Zabidat.github.io/Creer-et-publier-mon-portfolio-de-developpeur",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
